--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gsap Project</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +14,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <a href="https://skillform.io"><img src="https://assets.codepen.io/2621168/logo_1.svg" class="logo"
-                    alt="SkillForm Logo"></a>
+            <a href="https://github.com/Eric-Santos"><h3>Eric Santos</h3></a>
         </header>
         <main>
             <div class="col2 hero">
@@ -63,14 +62,14 @@
                 <p class="all">All of this, coming in 2022.</p>
             </div>
             <div class="col2 social">
-                <p class="learn">Learn more by following us: </p>
-                <a href="https://twitter.com/skillformio" target="_blank" class="col2">
-                    <svg class="twitter" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <p class="learn">Learn more by following me: </p>
+                <a href="https://github.com/Eric-Santos" target="_blank" class="col2">
+                    <!-- <svg class="twitter" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M22 2.75C11.3695 2.75 2.75 11.3695 2.75 22C2.75 32.6305 11.3695 41.25 22 41.25C32.6305 41.25 41.25 32.6305 41.25 22C41.25 11.3695 32.6305 2.75 22 2.75ZM31.2512 17.2605C31.2641 17.4625 31.2641 17.673 31.2641 17.8793C31.2641 24.1871 26.4602 31.4531 17.6816 31.4531C14.9746 31.4531 12.4652 30.6668 10.3512 29.3133C10.7379 29.3563 11.1074 29.3734 11.5027 29.3734C13.7371 29.3734 15.791 28.6172 17.4281 27.3367C15.3313 27.2938 13.5695 25.9188 12.968 24.0281C13.7027 24.1355 14.3645 24.1355 15.1207 23.9422C14.041 23.7228 13.0706 23.1364 12.3742 22.2827C11.6779 21.4289 11.2986 20.3603 11.3008 19.2586V19.1984C11.9324 19.5551 12.6758 19.7742 13.4535 19.8043C12.7997 19.3686 12.2635 18.7782 11.8925 18.0857C11.5215 17.3931 11.3271 16.6197 11.3266 15.834C11.3266 14.9445 11.5586 14.1324 11.9754 13.4277C13.1738 14.903 14.6692 16.1096 16.3645 16.9691C18.0598 17.8285 19.9169 18.3217 21.8152 18.4164C21.1406 15.1723 23.5641 12.5469 26.4773 12.5469C27.8523 12.5469 29.0898 13.1227 29.9621 14.0508C31.0406 13.8488 32.0719 13.4449 32.9914 12.9035C32.6348 14.0078 31.8871 14.9402 30.8945 15.5289C31.857 15.4258 32.7852 15.1594 33.6445 14.7855C32.9957 15.7395 32.1836 16.5859 31.2512 17.2605V17.2605Z"
-                            fill="#191919" />
-                    </svg>
-                    <p class="skillform">skillform</p>
+                            fill="#191919" /> -->
+                    <!-- </svg> -->
+                    <p class="skillform">Github</p>
                 </a>
             </div>
         </div>
@@ -93,6 +92,17 @@
         // display: none 'to' display: flex or 'from' display:flex to display: none
         // to('element', {'parameters': 'css clippy'})
         tl.to('h1', { 'clip-path': 'polygon(0% 100%, 100% 100%, 100% 0%, 0% 0%)', opacity: 1, y: 0, duration: 2.2})
+        // chaining .to
+        // third parameter is the offset, the substracted time from the timeline
+        .to('.form', {'clip-path': 'polygon(0% 100%, 100% 100%, 100% 0%, 0% 0%)', opacity: 1, y: 0}, '-=2')
+        .from('.card', {scaleY:0, stagger: .2}, '-=2')
+
+        // all to do animation on flagPoles, a box with a border-left
+        .from(flagPoles, {stagger: 1, opacity: 0, transform: 'translateY(100px)'}, '-=2')
+        // you can use multiple selectors
+        // translateY and y:0 are the same
+        .to('.title, .desc', {stagger: .1, duration: 1.2, opacity: 1, y: 0 })
+        .to('footer', {opacity: 1}, '+=.2')
     </script>
 </body>
 </html>
